# jlime_embedded_applications

./: README.md
MPlayer-1.0rc2-kai_for_nn/: README.JZ  build.jz4720  build.jz4740  build.jz4750  build.rafa  build.rafa2  config.h  config.mak  configure  jz_mxu.h  mp_msg.c  mplayer_mod.c  mplayer_mod.diff
SDL_mixer-1.2.11/: Makefile  a.out  config.status  libtool
blockrage-0.2.3/: ChangeLog  INSTALL.txt  KNOWN_BUGS  Makefile  Makefile.in  README  TODO  blockrage-fhs.rc  blockrage.6  blockrage.cfg  blockrage.rc  configure  inst
fbterm-1.6/: ChangeLog  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
fbterm-1.6/src/: Makefile  Makefile.am  Makefile.in  fbconfig.cpp  fbconfig.h  fbdev.cpp  fbdev.h  fbio.cpp  fbio.h  fbshell.cpp  fbshell.h  fbshellman.cpp  fbshellman.h  fbterm.cpp  fbterm.h  font.cpp  font.h  improxy.cpp  improxy.h  input.cpp  input.h  mouse.cpp  mouse.h  screen.cpp  screen.h  screen_render.cpp  vbe.h  vesadev.cpp  vesadev.h
fbterm-1.6/src/.deps/: fbterm-fbconfig.Po  fbterm-fbconfig.Tpo  fbterm-fbdev.Po  fbterm-fbio.Po  fbterm-fbio.Tpo  fbterm-fbshell.Po  fbterm-fbshell.Tpo  fbterm-fbshellman.Po  fbterm-fbterm.Po  fbterm-font.Po  fbterm-improxy.Po  fbterm-input.Po  fbterm-mouse.Po  fbterm-screen.Po  fbterm-screen_render.Po  fbterm-vesadev.Po
fbterm-1.6/src/lib/: Makefile  Makefile.am  Makefile.in  io.cpp  io.h  shell.cpp  shell.h  type.h  vterm.cpp  vterm.h  vterm_action.cpp  vterm_states.cpp
fbterm-1.6/src/lib/.deps/: libshell_a-io.Po  libshell_a-shell.Po  libshell_a-vterm.Po  libshell_a-vterm_action.Po  libshell_a-vterm_states.Po
fileselector_nn/: build.sh  build_nn.sh  fileselector.c  fileselector.c.bkp  fileselector.c.bkp2  fileselector.c.bkp3  global.c
fnkey/: build.sh  fnkey  fnkey.c
gmu-0.7.0/: Makefile  README.txt  dingux.keymap  gmu.conf.example  gmu.dingux.conf  gmu.gp2x.conf  gmu.nanonote.conf  gmu.unknown.conf  gmu.wiz.conf  gmuinput.dingux.conf  gmuinput.gp2x.conf  gp2x-f200.keymap  gp2x.keymap  nanonote.keymap  nanonote.mk  newdefault.keymap  unknown.mk  wiz.keymap
gnudict-jlime-gtk1/: README
gnudict-jlime-gtk1/mydict-0.6.3/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.zh_CN  TODO  aclocal.m4  config.cache  config.h  config.status  configure  configure.in  mydict.glade  mydict.ini  mydict.spec  }
gnudict-jlime-gtk1/mydict-0.6.3/intl/: Makefile
gnudict-jlime-gtk1/mydict-0.6.3/pixmaps/: mydict.xpm
gnudict-jlime-gtk1/mydict-0.6.3/po/: Makefile  Makefile.in  cat-id-tbl.c  mydict.pot  zh_CN.gmo  zh_CN.po
gnudict-jlime-gtk1/mydict-0.6.3/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  mydict  mydict.bkp  mydict.c  mydict.h  mydict_plugin.h  plugin.c  plugin.h
gnudict-jlime-gtk1/mydict-plugins-0.6.0/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.in  mydict-ndict.spec  mydict-plugins.spec
gnudict-jlime-gtk1/mydict-plugins-0.6.0/babylon/: Makefile  Makefile.am  Makefile.in  babylon.cpp  babylon.h  babylon.ini
gnudict-jlime-gtk1/mydict-plugins-0.6.0/demo.bkp/: plugdemo.cpp  plugdemo.h
gnudict-jlime-gtk1/mydict-plugins-0.6.0/dict/: Makefile  Makefile.am  Makefile.in  README  rfc2229.cpp  rfc2229.h  rfc2229.ini
gnudict-jlime-gtk1/mydict-plugins-0.6.0/jlime-plugin/: Makefile  Makefile.am  Makefile.in  build_jlime.sh  dict_engine.c  dict_engine.h  plugdemo.cpp  plugdemo.cpp_old  plugdemo.h
gnudict-jlime-gtk1/mydict-plugins-0.6.0/libdict-patch/: Makefile  ldcache.c  ldcache.c,v  lderrno.c  lderrno.c,v  ldsock.c  ldsock.c,v  ldutil.c  ldutil.c,v  libdict-wrap.cpp  libdict-wrap.cpp,v  libdict-wrap.cpp~  libdict.c  libdict.c,v
gnudict-jlime-gtk1/mydict-plugins-0.6.0/libdict-patch/include/: ldcache.h  ldcache.h,v  lderrno.h  lderrno.h,v  ldservcodes.h  ldservcodes.h,v  ldsock.h  ldsock.h,v  ldutil.h  ldutil.h,v  libdict-wrap.hpp  libdict-wrap.hpp,v  libdict.h  libdict.h,v
gnudict-jlime-gtk1/mydict-plugins-0.6.0/ndict/: Makefile  Makefile.am  Makefile.in  README  plugndict.cpp  plugndict.h  plugndict.ini
gnudict-jlime-gtk1/mydict-plugins-0.6.0/test/: Makefile  Makefile.am  Makefile.in  testplug.cpp
gnurobbo-0.65.6/: AUTHORS  COMPILING  ChangeLog  LICENSE-sound  Makefile  Makefile.gp2x  Makefile.psp  Makefile.zaurus  NEWS  README  ROB_engine.c  TODO  board.c  board.h  controls.c  font.c  game.c  game.h  gnurobbo  konstruktor.c  levels.c  levels.h  locales.c  locales.h  rcfile.c  rcfile.h  screen.c  screen.h  skins.c  sound.c  sound.h
gosmore-0.0.0.20090624/: ceglue.c  (+6 more)
(+545 files in other folders)
